--- a/Notes.html
+++ b/Notes.html
@@ -2,7 +2,15 @@
 <html>
 <head>
     <title>Notes.com</title>
+    <link href="StyleNotes.css" rel="stylesheet"/>
+    <h1>Welcome to Notes.com, where all your daily thoughts can be stored.</h1>
+    <div contenteditable="true">
+        <h2>Note:</h2> <!--Make this spawn only after a button is pressed with the correct intension. 
+        Frame a the editable text with a white underline.-->
+    </div>
 </head>
 
-<body></body>
+<body>
+
+</body>
 </html>
