--- a/Notes.html
+++ b/Notes.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <title>Notes.com</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="StyleNotes.css" rel="stylesheet"/>
-    <h1>Welcome to Notes.com, where all your daily thoughts can be stored.</h1>
+   
+    <div class = "jumbotron text-center">
+        <h1>Welcome to Notes.com, where all your daily thoughts can be stored.</h1>
+    </div>
     <div contenteditable="true">
         <h2>Note:</h2> <!--Make this spawn only after a button is pressed with the correct intension. 
         Frame a the editable text with a white underline.-->
@@ -12,6 +16,11 @@
 </head>
 
 <body>
-    <button> Add a list</button>
+
+    <div class = "container">
+        <button type="button" class="btn btn-block btn-primary" onclick="">Add a text list</button>
+        <button type="button" class="btn btn-block btn-default" onclick=""> Add a checklist</button>
+    </div>
+    
 </body>
 </html>
