--- a/index.html
+++ b/index.html
@@ -1,39 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Notes.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="StyleNotes.css" rel="stylesheet"/>
-    </div>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Matthew Jednacz | Portfolio</title>
+  <link rel="stylesheet" href="StylePortfolio.css" />
 </head>
-
 <body>
+  <div class="container">
+    <h1 id="name">Matthew Jednacz</h1>
+    <ul class="links">
+      <li><a href="https://github.com/Draco2550" target="_blank">GitHub Profile</a></li>
+      <li><a href="https://drive.google.com/file/d/1PawRd6M-zKrPfWWHYsritMbNgp-qB434/view?usp=sharing" target="_blank">My Resume (Google Drive)</a></li>
+      <li><a href="https://www.linkedin.com/in/matthew-jednacz-2930b52b4/" target="_blank">LinkedIn</a></li>
+    </ul>
+    <footer>
+      <p>&copy; <span id="year"></span> Matthew Jednacz</p>
+    </footer>
+  </div>
 
-    <div class="jumbotron text-center">
-        <h1>Welcome to Notes.com, where all your daily tasks can be stored.</h1>
-    </div>
-
-     
-<div class = "container">
-    <div class = "box"> 
-        <div class = "d-flex justify-content-center">
-            <h2>To Do List</h2>
-            <input type = "text" class = "form-control position-relative" placeholder = "Write here..." id = "inputBox">
-            <input type = "date" id = "dueDate" name="Due Date">
-            <button class = "add-button" button type = "submit" class = "btn btn-info" id = "addButton">Add</button>
-            <ul id = "list"></ul>
-        </div>
-    </div>
-</div>
-
-<div id="popup" class="popup">
-    <span id="popupMessage"></span>
-</div>
-
-        
-    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-    <script src="JSforNotes.js"></script>
+  <script src="Portfolio.js"></script>
 </body>
 </html>
