Adjusted the photo, and fixed the links.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav class="nav-bar">
       <a href="#about">About</a>
       <div class="nav-right">
-        <a href="https://github.com/your-username" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
+        <a href="https://github.com/Draco2550" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/matthew-jednacz-2930b52b4/" target="_blank">LinkedIn</a>
       </div>
     </nav>
   </header>
@@ -20,7 +20,7 @@
   <main class="site-content">
     <section class="hero">
       <div class="photo-placeholder">
-        <!-- photo goes here -->
+        <img scr="https://github.com/Draco2550/Draco2550.github.io/blob/main/Selfie.png">
       </div>
       <h1>Matthew Jednacz</h1>
       <p class="subtitle">Hands-on tech enthusiast & future CS grad</p>
@@ -28,21 +28,21 @@
 
     <section id="projects" class="projects">
       <h2>Projects</h2>
-      <p>Here’s a showcase of some of my favorite experiments—everything from Pi-hole setups to custom graphics engines. Stay tuned for live demos and deep-dives!</p>
+      <p>Stay tuned for my upcoming work!</p>
     </section>
 
     <section id="about" class="about">
       <h2>About Me</h2>
-      <p>I’m in the final stretch of my BS in Computer Science, blending analytical rigor with creative tinkering. Whether it’s troubleshooting a Raspberry Pi network or scripting a comic-style explainer, I’m all about learning by doing.</p>
+      <p>Travel has always fueled my curiosity—whether I’m hiking mountain trails, navigating foreign cities, or uncovering hidden gems close to home. That same spirit of exploration drives my work in tech. As I near the completion of my BS in Computer Science, I’m excited to continue growing through the CUNY Tech Prep fellowship and beyond.</p>
     </section>
 
     <section class="contact-toggle">
       <div id="toggle-button" class="toggle-button">Click Me!</div>
       <div id="links-block" class="links-block hidden">
         <ul>
-          <li><a href="https://drive.google.com/your_resume_link" target="_blank">My Resume</a></li>
-          <li><a href="https://github.com/your-username" target="_blank">GitHub Profile</a></li>
-          <li><a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn Profile</a></li>
+          <li><a href="https://drive.google.com/file/d/1PawRd6M-zKrPfWWHYsritMbNgp-qB434/view?usp=sharing" target="_blank">My Resume</a></li>
+          <li><a href="https://github.com/Draco2550" target="_blank">GitHub Profile</a></li>
+          <li><a href="https://www.linkedin.com/in/matthew-jednacz-2930b52b4/" target="_blank">LinkedIn Profile</a></li>
         </ul>
       </div>
     </section>
