--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main class="site-content">
     <section class="hero">
       <div class="photo-placeholder">
-        <img scr="https://github.com/Draco2550/Draco2550.github.io/blob/main/Selfie.png">
+        <img scr="https://github.com/Draco2550/Draco2550.github.io/blob/main/Selfie.png"></img>
       </div>
       <h1>Matthew Jednacz</h1>
       <p class="subtitle">Hands-on tech enthusiast & future CS grad</p>
