Fixed another typo regarding the image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
   <main class="site-content">
     <section class="hero">
       <div class="photo-placeholder">
-        <img scr="https://github.com/Draco2550/Draco2550.github.io/blob/main/Selfie.png"></img>
+        <img
+        src="Selfie.png"
+        alt="Matthew Jednacz selfie"
+        class="profile-photo"
+        />
       </div>
       <h1>Matthew Jednacz</h1>
       <p class="subtitle">Hands-on tech enthusiast & future CS grad</p>
